# loghound

./: .gitignore  LIMITATIONS.md  README.md  RELEASE_NOTES.md  all.jsonl  attack-names-report.md  auth.log.1  cloudtrail_report.jsonl  filtered.jsonl  hello.py  ioc-report.md  merged.jsonl  pyproject.toml  report.md  test_allowlist_config.yaml  test_iocs.txt  test_report.md  test_suppressed.jsonl  timeline-report.md
config/: default.yaml
docs/: ARCHITECTURE.md  SRS.md  json-schema.md
src/loghound/: __main__.py  default_config.yaml  engine.py  events.py  findings.py
src/loghound/detections/: __init__.py  base.py  cloudtrail_sensitive.py  new_ip_for_user.py  off_hours_login.py  password_spraying.py  privilege_escalation.py  ssh_brute_force.py  successful_after_brute.py  suspicious_user_agent.py  web_recon.py
src/loghound/parsers/: apache.py  clf.py  cloudtrail.py  detector.py  jsonlog.py  merge.py  (+3 more)
tests/: conftest.py  generate_large_log.py  test_aggregate.py  test_allowlist.py  test_apache_parser.py  test_cloudtrail_parser.py  test_cloudtrail_sensitive.py  test_engine.py  test_format_override.py  test_gzip_reader.py  test_ioc_matching.py  test_jsonlog_parser.py  test_markdown_report.py  test_memory_throughput.py  test_new_ip_for_user.py  test_nginx_parser.py  test_off_hours_login.py  test_password_spraying.py  test_privilege_escalation.py  test_ssh_brute_force.py  test_successful_after_brute.py  test_suspicious_user_agent.py  test_syslog_parser.py  test_tui.py  test_web_recon.py
tests/fixtures/: cloudtrail_sample.json  sample_cloudtrail.json  test_config.yaml
(+11 files in other folders)
