[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "loghound"
version = "0.1.0"
description = "A terminal tool for security log triage"
requires-python = ">=3.10"
dependencies = [
    "python-dateutil",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
